# sentinel-audio-recorder

./: .env.default  .gitignore  README.md  pyproject.toml  pytest.ini  setup.sh
src/sentinel_audio_recorder/: api.py  cli.py  config.py  env.py  recorder.py  run_api.py  uploader.py
system/: sentinel-audio-recorder.service
tests/: test_sentinel_audio_recorder.py
